Corrected pipeline syntax

--- a/.github/workflows/commit-pipeline.yaml
+++ b/.github/workflows/commit-pipeline.yaml
@@ -3,7 +3,8 @@ run-name:  ${{ github.actor }} made a commit
 
 on:
     push:
-        ftr/*
+        branches:
+            -  ftr/*
 
 jobs: 
     editorconfig:
