Added check if conforming to editorconfig

--- a/.github/workflows/commit-pipeline.yaml
+++ b/.github/workflows/commit-pipeline.yaml
@@ -15,3 +15,6 @@ jobs:
             - name: check-editorconfig-existence
               if: ${{ hashFiles('.editorconfig') == '' }}
               run: echo '.editorconfig exists'
+
+            - name: check-editorconfig
+              run: editorconfig-checker
