Added check if conforming to editorconfig

--- a/.github/workflows/commit-pipeline.yaml
+++ b/.github/workflows/commit-pipeline.yaml
@@ -17,4 +17,5 @@ jobs:
               run: echo '.editorconfig exists'
 
             - name: check-editorconfig
+              uses: editorconfig-checker/action-editorconfig-checker@main
               run: editorconfig-checker
