--- a/.github/workflows/commit-pipeline.yaml
+++ b/.github/workflows/commit-pipeline.yaml
@@ -16,6 +16,5 @@ jobs:
               if: ${{ hashFiles('.editorconfig') == '' }}
               run: echo '.editorconfig exists'
 
-            - name: check-editorconfig
-              uses: editorconfig-checker/action-editorconfig-checker@main
-              run: editorconfig-checker
+            - uses: editorconfig-checker/action-editorconfig-checker@main
+            - run: editorconfig-checker
