--- a/.github/workflows/commit-pipeline.yaml
+++ b/.github/workflows/commit-pipeline.yaml
@@ -35,3 +35,18 @@ jobs:
       - uses: nosborn/github-action-markdown-cli@v3.3.0
         with:
           files: .
+
+  unit-test:
+    runs-on: ubuntu-latest
+    working-directory: ./app
+    env:
+      PYTHON_VERSION: 3.10
+
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v4
+        with:
+          python-version: $PYTHON_VERSION
+      - run: pip install -r requirements.txt
+      - run: cd app
+      - run: python -m unittest
