--- a/.github/workflows/commit-pipeline.yaml
+++ b/.github/workflows/commit-pipeline.yaml
@@ -42,7 +42,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v4
         with:
-          python-version: 3.10
+          python-version: "3.10"
       - run: pip install -r requirements.txt
         working-directory: ./app
       - run: python -m unittest
