--- a/.github/workflows/commit-pipeline.yaml
+++ b/.github/workflows/commit-pipeline.yaml
@@ -47,3 +47,14 @@ jobs:
         working-directory: ./app
       - run: python -m unittest
         working-directory: ./app
+
+  gitleaks:
+    - runs-on: ubuntu-latest
+      needs: unit-test
+      steps:
+        - uses: actions/checkout@v4
+          with:
+            fetch-depth: 0
+        - uses: gitleaks/gitleaks-action@v2
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
