--- a/.github/workflows/commit-pipeline.yaml
+++ b/.github/workflows/commit-pipeline.yaml
@@ -58,3 +58,11 @@ jobs:
       - uses: gitleaks/gitleaks-action@v2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  sonar_cloud:
+    name: SonarCloud
+    runs-on: ubuntu-latest
+    steps:
+      - uses: AppThreat/sast-scan-action@master
+        with:
+          type: "python"
