--- a/.github/workflows/commit-pipeline.yaml
+++ b/.github/workflows/commit-pipeline.yaml
@@ -8,6 +8,7 @@ on:
 
 jobs:
   editorconfig:
+    name: "Check for .editorconfig"
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -20,16 +21,19 @@ jobs:
       - run: editorconfig-checker
 
   pylint:
+    name: "Check with Pylint"
     runs-on: ubuntu-latest
     steps:
       - uses: cclauss/GitHub-Action-for-pylint@0.7.0
 
   black:
+    name: "Check formatting with Black"
     runs-on: ubuntu-latest
     steps:
       - uses: psf/black@stable
 
   markdown-check:
+    name: "Check markdown"
     runs-on: ubuntu-latest
     steps:
       - uses: nosborn/github-action-markdown-cli@v3.3.0
@@ -37,6 +41,7 @@ jobs:
           files: .
 
   unit-test:
+    name: "Run unit test"
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -49,6 +54,7 @@ jobs:
         working-directory: ./app
 
   gitleaks:
+    name: "Check for leaks in secrets with gitleaks"
     runs-on: ubuntu-latest
     needs: unit-test
     steps:
@@ -60,9 +66,20 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   sonar_cloud:
-    name: SonarCloud
+    name: "Run SonarCloud"
     runs-on: ubuntu-latest
     steps:
       - uses: AppThreat/sast-scan-action@master
         with:
           type: "python"
+
+  vulnerability:
+    name: "Check for vulnerabilities with Snyk"
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: snyk/actions/python-3.10@master
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        with:
+          args: --severity-threshold=high
