--- a/.github/workflows/commit-pipeline.yaml
+++ b/.github/workflows/commit-pipeline.yaml
@@ -68,6 +68,7 @@ jobs:
   sonar_cloud:
     name: "Run SonarCloud"
     runs-on: ubuntu-latest
+    needs: gitleaks
     steps:
       - uses: AppThreat/sast-scan-action@master
         with:
@@ -76,6 +77,7 @@ jobs:
   vulnerability:
     name: "Check for vulnerabilities with Snyk"
     runs-on: ubuntu-latest
+    needs: sonar_cloud
     steps:
       - uses: actions/checkout@v4
       - uses: snyk/actions/python-3.10@master
