--- a/.github/workflows/commit-pipeline.yaml
+++ b/.github/workflows/commit-pipeline.yaml
@@ -70,6 +70,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: gitleaks
     steps:
+      - uses: actions/checkout@v4
       - uses: AppThreat/sast-scan-action@master
         with:
           type: "python"
