--- a/.github/workflows/commit-pipeline.yaml
+++ b/.github/workflows/commit-pipeline.yaml
@@ -91,3 +91,37 @@ jobs:
         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
       with:
         args: --severity-threshold=high
+
+  docker-build-push:
+    name: "Build Docker image, check for vulneratibilities and push"
+    runs-on: ubuntu_latest
+    needs: vulnerability
+    steps:
+    - name: "Checkout"
+      uses: actions/checkout@v4
+    - name: "Set up QEMU"
+      uses: docker/setup-qemu-action@v3
+    - name: "Set up BuildX"
+      uses: docker/setup-buildx-action@v3
+    - name: "Login to Docker Hub"
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOCKEN}}
+    - name: "Build and export to Docker (without push)"
+      uses: docker/build-push-action@v3
+      with:
+        context: .
+        push: true
+        tags: ${{ github.sha }}
+    # - name: "Scan image"
+    #   uses: aquasecurity/trivy-action@master
+    #   with:
+    #     image-ref:
+    #     format: 'table'
+    #     exit-code: '1'
+    #     ignore-unfixed: true
+    #     vuln-type: 'os,library'
+    #     severity: 'CRITICAL,HIGH'
+
+
