--- a/.github/workflows/commit-pipeline.yaml
+++ b/.github/workflows/commit-pipeline.yaml
@@ -94,7 +94,7 @@ jobs:
 
   docker-build-push:
     name: "Build Docker image, check for vulneratibilities and push"
-    runs-on: ubuntu_latest
+    runs-on: ubuntu-latest
     needs: vulnerability
     steps:
     - name: "Checkout"
