--- a/.github/workflows/commit-pipeline.yaml
+++ b/.github/workflows/commit-pipeline.yaml
@@ -107,7 +107,7 @@ jobs:
       uses: docker/login-action@v3
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOCKEN}}
+        password: ${{ secrets.DOCKERHUB_TOKEN}}
     - name: "Build and export to Docker (without push)"
       uses: docker/build-push-action@v3
       with:
