--- a/.github/workflows/commit-pipeline.yaml
+++ b/.github/workflows/commit-pipeline.yaml
@@ -113,7 +113,7 @@ jobs:
       with:
         context: .
         push: true
-        tags: ${{ github.sha }}
+        tags: evelonche/app:${{ github.sha }}
     # - name: "Scan image"
     #   uses: aquasecurity/trivy-action@master
     #   with:
