--- a/.github/workflows/commit-pipeline.yaml
+++ b/.github/workflows/commit-pipeline.yaml
@@ -112,16 +112,16 @@ jobs:
       uses: docker/build-push-action@v3
       with:
         context: .
-        push: true
+        load: true
         tags: evelonche/app:${{ github.sha }}
-    # - name: "Scan image"
-    #   uses: aquasecurity/trivy-action@master
-    #   with:
-    #     image-ref:
-    #     format: 'table'
-    #     exit-code: '1'
-    #     ignore-unfixed: true
-    #     vuln-type: 'os,library'
-    #     severity: 'CRITICAL,HIGH'
+    - name: "Scan image"
+      uses: aquasecurity/trivy-action@master
+      with:
+        image-ref:
+        format: 'table'
+        exit-code: '1'
+        ignore-unfixed: true
+        vuln-type: 'os,library'
+        severity: 'CRITICAL,HIGH'
 
 
